tests-integration/tests/roundtrip/invalid/semantic_errors/divide_by_var_zero/divide_by_var_zero.essence
letting x be 0
find y : int
such that y = 1 / x